# c4sb-demo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: ashrae-223-rtu.ttl  brick-building-simple.ttl  rec-building-simple.ttl
data/validations/ashrae-223/: model.shapes.ttl  schema.shapes.ttl
src/c4sb_demo/: __init__.py  app.py  graph_operations.py  sparql_constants.py  validate_graphs.py
tests/: test_sparql_queries.py
