[project]
name = "c4sb-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Rodgers", email = "andrew@aceiotsolutions.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.5",
    "pyrefly>=0.16.2",
    "pyvis>=0.3.2",
    "rdflib>=7.1.4",
    "ruff>=0.11.11",
    "streamlit>=1.45.1",
]

[project.scripts]
c4sb-demo = "cs4b_demo:main"
c4sb-validate = "cs4b_demo:validate_graphs.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyrefly>=0.16.2",
    "pytest>=8.3.5",
    "watchdog>=6.0.0",
]
[tool.pyrefly]
project_includes = ["**/*"]
project_excludes = [
    "**/.[!/.]*",
    "**/*venv/**/*",
]
